--- a/index.ipynb
+++ b/index.ipynb
@@ -52,7 +52,8 @@
    "outputs": [],
    "source": [
     "# connect database and create cursor here\n",
-    "impor"
+    "import sqlite3\n",
+    "connection = sqlite3.con"
    ]
   },
   {
