--- a/index.ipynb
+++ b/index.ipynb
@@ -54,7 +54,7 @@
     "# connect database and create cursor here\n",
     "import sqlite3\n",
     "connection = sqlite3.connect('pets_database.db')\n",
-    "cur"
+    "cursor = connection.cursor()"
    ]
   },
   {
@@ -82,7 +82,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create table here"
+    "# create table here\n",
+    "cursor.execute()"
    ]
   },
   {
