automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -83,7 +83,8 @@
    "outputs": [],
    "source": [
     "# create table here\n",
-    "cursor.execute()"
+    "cursor.execute(\"\"\"\n",
+    "CREATE TABLE\"\"\")"
    ]
   },
   {
