--- a/index.ipynb
+++ b/index.ipynb
@@ -84,7 +84,8 @@
    "source": [
     "# create table here\n",
     "cursor.execute(\"\"\"\n",
-    "CREATE TABLE\"\"\")"
+    "CREATE TABLE cats (\n",
+    "id INTEGER PRMIARY KEY)\"\"\")"
    ]
   },
   {
