automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -85,7 +85,9 @@
     "# create table here\n",
     "cursor.execute(\"\"\"\n",
     "CREATE TABLE cats (\n",
-    "id INTEGER PRMIARY KEY)\"\"\")"
+    "id INTEGER PRMIARY KEY,\n",
+    "name TEXT\n",
+    "age INTEGER)\"\"\")"
    ]
   },
   {
