automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -87,7 +87,8 @@
     "CREATE TABLE cats (\n",
     "id INTEGER PRMIARY KEY,\n",
     "name TEXT\n",
-    "age INTEGER)\"\"\")"
+    "age INTEGER\n",
+    "breed TEXT)\"\"\")"
    ]
   },
   {
