--- a/index.ipynb
+++ b/index.ipynb
@@ -78,9 +78,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7f7501dc0650>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# create table here\n",
     "cursor.execute(\"\"\"\n",
@@ -88,7 +99,9 @@
     "id INTEGER PRMIARY KEY,\n",
     "name TEXT\n",
     "age INTEGER\n",
-    "breed TEXT)\"\"\")"
+    "breed TEXT\n",
+    ")\n",
+    "\"\"\")"
    ]
   },
   {
