--- a/index.ipynb
+++ b/index.ipynb
@@ -130,7 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# insert Maru into the pet_database.db here"
+    "# insert Maru into the pet_database.db here\n"
    ]
   },
   {
