automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -130,7 +130,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# insert Maru into the pet_database.db here\n"
+    "# insert Maru into the pet_database.db here\n",
+    "cursor.execute(\"\"\"INSERT\"\"\")"
    ]
   },
   {
