--- a/index.ipynb
+++ b/index.ipynb
@@ -131,7 +131,7 @@
    "outputs": [],
    "source": [
     "# insert Maru into the pet_database.db here\n",
-    "cursor.execute(\"\"\"INSERT\"\"\")"
+    "cursor.execute(\"\"\"INSERT INTO cats (name, age, breed) V\"\"\")"
    ]
   },
   {
