--- a/index.ipynb
+++ b/index.ipynb
@@ -51,7 +51,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# connect database and create cursor here"
+    "# connect database and create cursor here\n",
+    "import sqlite3\n",
+    "connection = sqlite3.connect('pets_database.db')\n",
+    "cursor = connection.cursor()"
    ]
   },
   {
@@ -75,11 +78,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x2b8260338f0>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# create table here"
+    "# create table here\n",
+    "cursor.execute(\"\"\"\n",
+    "CREATE TABLE cats (\n",
+    "id INTEGER PRIMARY KEY,\n",
+    "name  TEXT,\n",
+    "age INTEGER,\n",
+    "breed TEXT\n",
+    ")\n",
+    "\"\"\")"
    ]
   },
   {
@@ -104,11 +126,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x2b8260338f0>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# insert Maru into the pet_database.db here"
+    "# insert Maru into the pet_database.db here\n",
+    "cursor.execute(\"\"\"INSERT INTO cats (name, age, breed) VALUES ('Maru', 3, 'Scottish Fold');\"\"\")"
    ]
   },
   {
@@ -170,11 +204,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# execute the INSERT INTO statements here"
+    "# execute the INSERT INTO statements here\n",
+    "file = open(\"./01_insert_cats_into_cats_table.sql\", 'r')\n",
+    "sql = file.read()\n",
+    "cursor.executescript(sql)\n",
+    "file.close()"
    ]
   },
   {
@@ -258,11 +296,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Maru',), (\"Lil' Bub\",), ('Hannah',)]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# select cats from database here"
+    "# select cats from database here\n",
+    "cursor.execute(\"\"\"SELECT name FROM cats\"\"\").fetchall()"
    ]
   },
   {
@@ -298,11 +348,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(3, 'Hannah', 1, 'Tabby')]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# select using WHERE clause here"
+    "# select using WHERE clause here\n",
+    "sql = \"\"\"SELECT * FROM cats WHERE age < 2\"\"\"\n",
+    "cursor.execute(sql).fetchall()"
    ]
   },
   {
@@ -346,11 +409,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x2b8260338f0>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# update hannah here"
+    "# update hannah here\n",
+    "cursor.execute(\"\"\"UPDATE cats SET name = 'Hana' WHERE name = 'Hannah'\"\"\")"
    ]
   },
   {
@@ -378,11 +453,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x2b8260338f0>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# DELETE record with id=2 here"
+    "# DELETE record with id=2 here\n",
+    "cursor.execute(\"\"\"DELETE FROM cats WHERE id = 2;\"\"\")"
    ]
   },
   {
@@ -421,7 +508,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
